# Digital-Twins

./: .dockerignore  .env.docker-override  .env.example  .env.local  .env.template  .flake8  .gitattributes  .gitignore  .pylintrc  CONTRIBUTING.md  Dockerfile  Dockerfile.unittest  LICENSE  README.md  River_flow_stage_code.py  api_calls.py  api_keys.env.template  build_docker.sh  central_buildings.geojson  create_new_env_window.yml  docker-compose-dev.yml  docker-compose.yml  environment.yml  from_api_to_cache_table.py  geoserver.Dockerfile  insert_apis_to_db.py  insert_rows_postgresql.py  instructions.json  nz_bbox.geojson  pyproject.toml  requirements.txt  selected_polygon.geojson  selected_taumutu.geojson  sonar-project.properties  template.env  token.env
.devcontainer/: devcontainer.json
.github/: pull_request_template.md
.pylint.d/: insert_apis_to_db1.stats
autodoc/: conf.py
backend/: Dockerfile  create_new_env_window.yml  db_configure.yml
docker_digitaltwin/: docker-compose.yml
docs/: conf.py  genindex.html  index.html  index.rst  objects.inv  py-modindex.html  search.html  searchindex.js
eddie_floodresilience/: __init__.py  blueprint.py  run_all.py  tasks.py
floodresilience/: __init__.py  blueprint.py  retrieve_static_boundaries.py  run_all.py  static_boundary_instructions.json  tables.py  tasks.py
geoserver/: .gitignore
otakaro/: __init__.py  area.py  blueprint.py  initialise_db_with_files.py  otakaro_data_instructions.json  run_all.py  tasks.py
outputs/: MEDUSA_Roads.geojson  MEDUSA_Roofs.geojson
paper/: compile_paper.sh  paper.bib  (+1 more)
(+873 files in other folders)
